# unityplugin

./: README.md
Assets/: Test.cs
src/: CMakeLists.txt  plugin.cpp  plugin.h
